Travel::Status::DE::IRIS 0.09 - Tue Apr 28 2015

    * Result: Add arrival_wings, departure_wings and is_wing accessors
      (a wing train is coupled to the respective departure, but has its own ID)
    * db-iris: Indicate wings in output
    * Result: Remove train_no_transfer accessor (was based on erroneous
      assumptions)
    * Result: Add is_unscheduled, replaced_by and replacement_for accessors
    * db-iris: Add -oR to show replacement information

Travel::Status::DE::IRIS 0.08 - Thu Mar 12 2015

    * Clarify Result->train_id documentation
    * Add IRIS delay/qos keys 13, 60, 75, 76

Travel::Status::DE::IRIS 0.07 - Fri Jan 09 2015

    * Fix a crash related to unscheduled additional stops in a train's route
    * Improve Travel::Status::DE::IRIS::Stations matching
    * Add IRIS delay/qos keys 56, 59, 61, 65, 73, 74, 77

Travel::Status::DE::IRIS 0.06 - Mon Nov 03 2014

    * New non-core module dependency: List::Compare
    * Add support for canceled and additional stops
    * db-iris: Add options -oa and -oc
    * Result: Add accessors additional_stops and canceled_stops
    * Improve support for delayed trains
    * Support additional IRIS delay messages

Travel::Status::DE::IRIS 0.05 - Thu Oct 16 2014

    * Support additional IRIS delay messages

Travel::Status::DE::IRIS 0.04 - Sat Jun 28 2014

    * Fix --track-via <stop> not matching trains changing their ID at <stop>
    * Add new (not entirely verified) IRIS delay and qos messages
    * IRIS: add serializable option. Use this if you intend to serialize
      the list returned by ->results
    * Do not errour out if only partial data is available, show partial data
      and a warning instead (closes #4)
    * Add several qos and delay messages

Travel::Status::DE::IRIS 0.03 - Fri Feb 14 2014

    * IRIS / db-iris: Add lookahead option
    * db-iris: Fix --via not matching destination of trains with incomplete
      route data
    * Detect and merge duplicate results caused by train ID changes