@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.09';
+our $VERSION = '0.10';
 
 use Carp;
 use DateTime;
@@ -448,7 +448,7 @@ I<station>
 
 =head1 VERSION
 
-version 0.09
+version 0.10
 
 =head1 DESCRIPTION
 
